force-app/main/default/objects/Batalha__c/Batalha__c.object-meta.xml
<CustomObject>
    <description>Batalhas Cadastradas para a luta.</description>
    <label>Batalha</label>
    <nameField>
        <label>Nome de Batalha</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batalhas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>