force-app/main/default/objects/Batalha__c/fields/Datadeinicio__c.field-meta.xml
<CustomField>
    <fullName>Datadeinicio__c</fullName>
    <description>data de inicio da batalha</description>
    <inlineHelpText>data de inicio da batalha</inlineHelpText>
    <label>Data de inicio</label>
    <type>Date</type>
</CustomField>