force-app/main/default/objects/Batalha__c/fields/Datadetermino__c.field-meta.xml
<CustomField>
    <fullName>Datadetermino__c</fullName>
    <description>data final da batalha</description>
    <inlineHelpText>data final da batalha</inlineHelpText>
    <label>Data de termino</label>
    <type>Date</type>
</CustomField>