force-app/main/default/objects/Batalha__c/fields/Statusdabatalha__c.field-meta.xml
<CustomField>
    <fullName>Statusdabatalha__c</fullName>
    <description>Status da batalha</description>
    <inlineHelpText>Status da batalha</inlineHelpText>
    <label>Status da batalha</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Iniciada</fullName>
            </value>
            <value>
                <fullName>Em Andamento</fullName>
            </value>
            <value>
                <fullName>Finalizada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>